k8s/infra/auth/authentik/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames: ["authentik.beans.lan"]
  rules:
    - backendRefs:
        - name: authentik
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
